On iOS Safari, the mobile menu exit button is not positioned on the right side. Despite working fine on desktop. Trying vendor specific CSS properties as a fix.

--- a/public/css/navigation.css
+++ b/public/css/navigation.css
@@ -53,8 +53,10 @@ header{
 }
 
 .mobile-exit-button-container{
+    display: -webkit-flex;
     display: flex;
     justify-content: right;
+    -webkit-justify-content: right;
     width: 100%;
 }
 
